@@ -1,3 +1,9 @@
+2009-11-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Coverage for conditional `else' and `endif' arguments.
+	* tests/cond46.test: New test.
+	* tests/Makefile.am: Update.
+
 2009-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Simplify Variable::_check_ambiguous_condition.
